--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>AirBnB clone</title>
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
 </head>
 
 <body>
