--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,30 +11,45 @@
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 </head>
+
 <body>
-    <header></header>
+    <header>
+        <div class="logo"></div>
+    </header>
     <div class="container">
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>California, Arizona..</h4>
+                <h4>California, Arizona...</h4>
                 <ul class="popover">
-                    <h2>Arizona</h2>
-                    <li>Page</li>
-                    <li>Page2</li>
-                    <h2>California</h2>
-                    <li>San Francisco</li>
-                    <li>Los Altos</li>
+                    <li>
+                        <h2>Arizona:</h2>
+                    </li>
+                    <li>
+                        <ul>
+                            <li>page 1</li>
+                            <li>page 2</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>California:</h2>
+                    </li>
+                    <li>
+                        <ul>
+                            <li>San Francisco</li>
+                            <li>Los Altos</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Internet, Kitchen...</h4>
                 <ul class="popover">
-                    <ul>Internet</ul>
-                    <ul>TV</ul>
-                    <ul>Kitchen</ul>
-                    <ul>Iron</ul>
+                    <li>Internet</li>
+                    <li>TV</li>
+                    <li>Kitchen</li>
+                    <li>Iron</li>
                 </ul>
             </div>
             <button>Search</button>
@@ -41,4 +57,5 @@
     </div>
     <footer>Holberton School</footer>
 </body>
+
 </html>
