--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -14,29 +14,43 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="logo"></div>
+    </header>
     <div class="container">
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>California, Arizona..</h4>
+                <h4>California, Arizona...</h4>
                 <ul class="popover">
-                    <h2>Arizona</h2>
-                    <li>Page</li>
-                    <li>Page2</li>
-                    <h2>California</h2>
-                    <li>San Francisco</li>
-                    <li>Los Altos</li>
+                    <li>
+                        <h2>Arizona:</h2>
+                    </li>
+                    <li>
+                        <ul>
+                            <li>page 1</li>
+                            <li>page 2</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>California:</h2>
+                    </li>
+                    <li>
+                        <ul>
+                            <li>San Francisco</li>
+                            <li>Los Altos</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Internet, Kitchen...</h4>
                 <ul class="popover">
-                    <ul>Internet</ul>
-                    <ul>TV</ul>
-                    <ul>Kitchen</ul>
-                    <ul>Iron</ul>
+                    <li>Internet</li>
+                    <li>TV</li>
+                    <li>Kitchen</li>
+                    <li>Iron</li>
                 </ul>
             </div>
             <button>Search</button>
@@ -56,4 +70,5 @@
     </div>
     <footer>Holberton School</footer>
 </body>
+
 </html>
